Correcting of multiple faults, Correcting the TelportCommand and correcting the Tabcompleter!